--- a/src/style.css
+++ b/src/style.css
@@ -29,11 +29,6 @@ nav{
 
 }
 
-main{
-    background: green;
-    background-size: cover;
-    height: 92vh;
-}
 
 .nav-list{
     list-style: none;
@@ -47,11 +42,6 @@ main{
     
 }
 
-body{
-    min-height: 100vh;
-    background: #ffffff;
-    
-}
 
 .navigation{
     position: relative;
@@ -120,4 +110,35 @@ footer {
   .footer-copy {
     margin-top: 20px;
   }
+  
+  
+  
+  main {
+    display: flex;
+    background: rgb(255, 255, 255);
+    background-size: cover;
+    height: 92vh;
+  }
+  
+  .main-content {
+    display: flex;
+  }
+  
+  .navigation {
+    position: relative;
+    height: 600px;
+    background: #23232e;
+    width: 320px;
+    box-shadow: 4px;
+    margin-right: 20px;
+  }
+  
+  .images-container {
+    display: flex;
+  }
+  
+  .images-container img {
+    max-width: 50%;
+  }
+  
   
